src/assets/styles/helper/_transition.scss
@import './variables/variables';

.default-trans{
    transition: 0.75s;
    transition-timing-function: cubic-bezier(0.52, 0.01, 0.16, 0.75);
}

.text-block {
    .animate-in & {
        height: 50px;
        transition: height .4s ease-in-out;
        animation-fill-mode: forwards;

        @media screen and (min-width: 768px) {
            height: 60px;
        } 
    }

    .animate-out & {
        height: 0;
        transition: height .4s ease-in-out;
        transition-delay: .35s;
        animation-fill-mode: forwards;
    }

    h1 {

        .animate-in & {
            transform: translateY(0);
            transition: transform .35s ease-in-out;
            transition-delay: .65s;
            animation-fill-mode: forwards;
        }
    
        .animate-out & {
            transform: translateY(50px);
            transition: transform .35s ease-in-out;
            animation-fill-mode: forwards;
        }
    }
}

section {
    .animate-in & {
        opacity: 1;
        transform: translateY(0);
        transition: transform.4s ease-in-out,
                    opacity .4s ease-in-out;
        animation-fill-mode: forwards;
    }

    .animate-out & {
        opacity: 0;
        transform: translateY(-20px);
        transition: transform.4s ease-in-out,
                    opacity .4s ease-in-out;
        transition-delay: .6s;
        animation-fill-mode: forwards;
    }
}

.slider__inner {
    .slider.animate-in & {
        opacity: 1;
        transform: translateY(0);
        transition: transform.4s ease-in-out,
                    opacity .4s ease-in-out;
        transition-delay: .6s;
        animation-fill-mode: forwards;
    }

    .slider.animate-out & {
        opacity: 0;
        transform: translateY(-20px);
        transition: transform.4s ease-in-out,
                    opacity .4s ease-in-out;
        animation-fill-mode: forwards;
    }
}

.section--hero__img,
.app-background-image {
    .animate-in & {
        opacity: .4;
        transform: translateY(0);
        transition: transform.4s ease-in-out,
                    opacity .4s ease-in-out;
        animation-fill-mode: forwards;
    }

    .animate-out & {
        opacity: 0;
        transform: translateY(-20px);
        transition: transform.4s ease-in-out,
                    opacity .4s ease-in-out;
        transition-delay: .6s;
        animation-fill-mode: forwards;
    }
}

// .section--hero__img,
// .app-background-image {

//     .animate-in & {
//         opacity: .4;
//         transform: translateY(0);
//         transition: transform.4s ease-in-out,
//                     opacity .8s ease-in-out;
//         transition-delay: .2s;
//         animation-fill-mode: forwards;
//     }

//     .animate-out & {
//         opacity: 0;
//         transform: translateY(-100%);
//         transition: 
//                     transform.4s ease-in-out,
//                     opacity .8s ease-in-out;
//         transition-delay: .4s;
//         animation-fill-mode: forwards;
//     }
// }

@keyframes swipe-left {
    45% {
        left: 0;
    }

    50% {
        left: 0;
    }

    100% {
        left: -100%;
    }
}

@keyframes swipe-right {
    45% {
        left: -10%;
    }

    50% {
        left: -10%;
    }

    100% {
        left: -110%;
    }
}

.swiper {
    position: absolute;
    display: flex;
    align-items: center;
    top: -130px;
    left: 100%;
    right: 0;
    bottom: 0;
    width: 110%;
    z-index: 2;
    background-color: lighten($tertiary-colour, 25%);
    border-right: 25px solid darken($primary-colour, 5%);
    border-left: 25px solid darken($primary-colour, 5%);

    .animate-out & {
        animation: swipe-right 1.6s;
    }

    &-logo {
        max-width: 15%;
        margin: 0 auto;
    }
}

